kb: add READMEs for 5 topics